<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search_text">Поиск</string>
    <string name="media_library_text">Медиатека</string>
    <string name="settings_text">Настройки</string>

    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="contact_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="share_message">Посмотрите курс по Android-разработке в Практикуме:
        https://practicum.yandex.ru/profile/android-developer/</string>
    <string name="support_email">zlod.@inbox.ru</string>
    <string name="support_subject">
        Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_message">
        Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="choose_email_client">Выберите почтовый клиент</string>
    <string name="terms_url">https://yandex.ru/legal/practicum_offer/</string>

    <string name="clear_search">Очистить поиск</string>

    <string name="track_name">Название трека</string>
    <string name="artist_name">Исполнитель</string>
    <string name="track_time">0:01</string>

    <string name="error_search">"Ничего не нашлось"</string>
    <string name="error_internet">
        "Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету"</string>
    <string name="refresh_text">"Обновить"</string>

    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>

    <string name="player_title">Аудиоплеер</string>
    <string name="duration_label">Длительность</string>
    <string name="album_label">Альбом</string>
    <string name="year_label">Год</string>
    <string name="genre_label">Жанр</string>
    <string name="country_label">Страна</string>
    <string name="album_art_description">Обложка альбома</string>

    <string name="media_library">Медиатека</string>
    <string name="playlists">Плейлисты</string>
    <string name="favourite_tracks">Избранные треки</string>
    <string name="empty_favourites_message">Ваша медиатека пуста</string>

    <string name="empty_playlists_message">Вы не создали \nни одного плейлиста</string>
    <string name="playlist_created">Плейлист %s создан</string>

    <!-- NEW PLAYLIST SCREEN -->
    <string name="new_playlist_title">Новый плейлист</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="create_playlist">Создать</string>
    <string name="playlist_cover">Обложка плейлиста</string>
    <string name="add_cover_image">Добавить обложку</string>

    <!-- Диалог подтверждения выхода -->
    <string name="exit_confirmation_title">Завершить создание плейлиста?</string>
    <string name="exit_confirmation_message">Все несохраненные данные будут потеряны</string>
    <string name="finish">Завершить</string>
    <string name="cancel">Отмена</string>

    <string name="no_playlists">Нет плейлистов</string>

    <string name="add_to_playlist">Добавить в плейлист</string>

    <plurals name="track_count">
        <item quantity="one">%d трек</item> <!-- 1, 21, 31... (но не 11) -->
        <item quantity="few">%d трека</item> <!-- 2-4, 22-24... (но не 12-14) -->
        <item quantity="many">%d треков</item> <!-- 0, 5-20, 25-30... -->
        <item quantity="other">%d треков</item>
    </plurals>

    <string name="menu">Меню</string>
    <!-- Диалог удаления трека -->
    <string name="delete_track_dialog_title">Хотите удалить трек?</string>
    <string name="dialog_no">НЕТ</string>
    <string name="dialog_yes">ДА</string>

    <!-- Плейлист - меню и диалоги -->
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_playlist_dialog_message">Хотите удалить плейлист «%s»?</string>
    <string name="empty_playlist_share_message">
        В этом плейлисте нет списка треков, которым можно поделиться</string>

    <string name="edit_playlist">Редактировать</string>
    <string name="save_playlist">Сохранить</string>

    <string name="empty_playlist_message">В этом плейлисте пока нет треков</string>

    <plurals name="minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>