<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_settings_color"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/settings_toolbar"
        style="@style/ToolbarStyle"
        app:title="@string/settings_text" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitch"
        style="@style/SettingsItemStyle"
        android:maxWidth="@dimen/max_button_width"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        android:text="@string/dark_theme"
        app:switchMinWidth="46dp"
        app:thumbTint="@drawable/switch_thumb_selector"
        app:trackTint="@drawable/switch_track_selector"
        app:useMaterialThemeColors="false" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/shareTextView"
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/ic_share"
        android:text="@string/share_app" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/supportTextView"
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/ic_support"
        android:text="@string/contact_support" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/termsTextView"
        style="@style/SettingsItemStyle"
        android:drawableEnd="@drawable/ic_arrow_forward"
        android:text="@string/user_agreement" />
</LinearLayout>