<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_settings_color"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/search_toolbar"
        style="@style/ToolbarStyle"
        app:title="@string/search_text" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:paddingHorizontal="@dimen/padding_horizontal">

        <EditText
            android:id="@+id/search_input"
            style="@style/SearchElementStyle"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/search_field_background"
            android:drawableStart="@drawable/ic_search_small"
            android:drawablePadding="4dp"
            android:drawableTint="@color/search_field_element"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search_text"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:letterSpacing="0"
            android:maxLines="1"
            android:paddingStart="@dimen/padding_small"
            android:singleLine="true"
            android:textColorHint="@color/search_field_element"
            android:textCursorDrawable="@drawable/cursor_drawable"
            android:textSize="@dimen/text_medium"
            tools:ignore="Autofill" />

        <ImageButton
            android:id="@+id/clear_button"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="0dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/clear_search"
            android:src="@drawable/ic_clear"
            android:visibility="invisible" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:alpha="1"
        android:layout_marginTop="140dp"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/history_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible"
            android:layout_marginBottom="86dp"
            android:elevation="2dp">

            <TextView
                android:id="@+id/history_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingStart="@dimen/padding_horizontal"
                android:paddingTop="@dimen/padding_medium_max"
                android:paddingBottom="@dimen/padding_small"
                android:paddingEnd="@dimen/padding_horizontal"
                android:text="@string/search_history"
                android:textColor="@color/black_white"
                android:textSize="@dimen/text_medium_max"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/history_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:paddingTop="@dimen/padding_micro"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_track"/>

            <com.google.android.material.button.MaterialButton
                style="@style/ClearButton"
                android:id="@+id/clear_history_button"
                android:text="@string/clear_history"/>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingTop="2dp"
            android:paddingBottom="64dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_track" />

        <TextView
            android:id="@+id/error_search"
            style="@style/ErrorsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_search"
            android:visibility="gone"
            app:drawableTopCompat="@drawable/error_search" />

        <LinearLayout
            android:id="@+id/error_internet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                style="@style/ErrorsTextView"
                android:layout_width="312dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/error_internet"
                app:drawableTopCompat="@drawable/error_internet" />

            <Button
                android:id="@+id/refresh_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/icon_size"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/refresh_text"
                android:textAllCaps="false"
                android:textColor="@color/white_black"
                android:textSize="@dimen/text_medium_small"
                app:backgroundTint="@color/black_white"
                app:cornerRadius="54dp" />
        </LinearLayout>
    </FrameLayout>
</LinearLayout>