<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="61dp"
    android:paddingStart="@dimen/padding_small"
    android:paddingEnd="@dimen/padding_small">

    <ImageView
        android:id="@+id/artwork"
        android:layout_width="@dimen/cover_size"
        android:layout_height="@dimen/cover_size"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/placeholder_track_poster" />

    <TextView
        android:id="@+id/track_name"
        style="@style/SongTitleStyle"
        android:layout_width="@dimen/max_text_width"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="14dp"
        app:layout_constraintStart_toEndOf="@id/artwork"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/track_name" />

    <LinearLayout
        android:id="@+id/track_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toEndOf="@id/artwork"
        app:layout_constraintTop_toBottomOf="@id/track_name">

        <TextView
            android:id="@+id/artist_name"
            style="@style/InfoStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="@string/artist_name" />

        <View
            android:layout_width="@dimen/separator_size"
            android:layout_height="@dimen/separator_size"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:background="@drawable/ic_separator_dot" />

        <TextView
            android:id="@+id/track_time"
            style="@style/InfoStyle"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            tools:text="@string/track_time" />
    </LinearLayout>

    <ImageView
        android:id="@+id/arrow_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:src="@drawable/ic_arrow_forward"
        style="@style/InfoStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>